@@ -14,7 +14,7 @@ BEGIN
   }
 
 use vars qw($VERSION);
-$VERSION = '1.29';	# Current version of this package
+$VERSION = '1.30';	# Current version of this package
 require  5.008003;	# requires this Perl version or later
 
 use strict;
